# lseg-stock-exchange-project

./: .gitignore  CMakeLists.txt  CSVHandler.cpp  CSVHandler.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  README.md  RecordBook.cpp  RecordBook.h  TradeApplication.cpp  TradeApplication.h  main.cpp  utils.cpp
